# finding-highly-interpretable-circuits

./: .gitignore  README.md  pyproject.toml
experiments/: circuit_comparison.py  compare_acc_accpp.py  extract_signals.py  find_representatives.py  generate_tables.py  interventions.py  plot_circuit_comparison.py  plot_clustering.py  plot_condition_numbers.py  plot_interventions.py  plot_signals.py  plot_tau_ecdf.py  process_graphs.py  prune_intervention_graphs.py  run_clustering_pipeline.sh  run_interventions_pipeline.sh  run_paper_figures.sh  run_tracing.sh  run_tracing_balanced.sh  trace.py  unify_graphs.py
experiments/autointerp/: annotate_graphs.py  collect_pile_activations.py  compute_metrics.py  extract_top_activations.py  h5_utils.py  interpret_representatives.py  interpret_signals.py  merge_shards.py  prompts.py  run_autointerp_pipeline.sh  run_qualitative_pipeline.sh  score_interpretations.py  view_circuit.py
lib/accpp_tracer/: .gitignore  CHANGELOG.md  README.md  pyproject.toml  requirements.txt
lib/accpp_tracer/src/accpp_tracer/: __init__.py  _typecheck.py  attribution.py  circuit.py  decomposition.py  models.py  rope.py  signals.py  tracing.py
lib/accpp_tracer/src/accpp_tracer/datasets/: __init__.py  base.py  facts.py  gendered_pronoun.py  greater_than.py  ioi.py
lib/accpp_tracer/src/accpp_tracer/graphs/: __init__.py  pruning.py  unification.py  visualization.py
