[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "accpp-paper"
version = "0.1.0"
description = "Paper experiments for 'Finding Highly Interpretable Prompt-Specific Circuits in Language Models'"
requires-python = "==3.10.*"
# All deps below are pinned to the signals-stream conda env for
# numerical reproducibility of the paper experiments.
dependencies = [
    "accpp-tracer @ file:lib/accpp_tracer",
    "torch==2.6.0",
    "transformer-lens==2.17.0",
    "transformers==4.52.1",
    "einops==0.8.1",
    "jaxtyping==0.3.2",
    "numpy==1.26.4",
    "scipy==1.15.3",
    "networkx==3.4.2",
    "pandas==2.2.3",
    "tqdm==4.67.1",
    "matplotlib==3.10.3",
    "seaborn==0.13.2",
    "safetensors==0.5.3",
    "accelerate==1.7.0",
    "h5py==3.13.0",
    # Experiment-specific
    "plotly==6.1.1",
    "wandb==0.19.11",
    "nnsight==0.4.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.4",
]
